Django2.0 fixes
remove remark about issue in Safari (fixed)

many squashed updates

--- a/viper/web/viperweb/static/viperweb/css/viper.css
+++ b/viper/web/viperweb/static/viperweb/css/viper.css
@@ -1,6 +1,27 @@
+/* style.css  - CSS customizations */
+
+/* Sticky footer styles
+-------------------------------------------------- */
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  line-height: 60px; /* Vertically center the text there */
+  background-color: #f5f5f5;
+}
+
 /* Upload Form
 -------------------------------------------------- */
-
 .btn-file {
     position: relative;
     overflow: hidden;
@@ -23,25 +44,9 @@
 
 /* Adds padding to Note Rows.
 -------------------------------------------------- */
-
-
 .note-box {
     padding-top: 20px;
 }
-
-/* Customize sticky footer
--------------------------------------------------- */
-body {
-    padding-bottom: 40px;
-}
-
-.footer {
-    padding-top: 5px;
-    /* Set the fixed height of the footer here */
-    height: 30px;
-    background-color: #f5f5f5;
-}
-
 
 /* Misc
 -------------------------------------------------- */
